# aluguel-carro

./: README.md  REDME.md
Backend/: .env  README.md  REDME.md  docker-compose.yml  pyproject.toml
Backend/api/: alembic.ini  app.py  database.py  security.py  settings.py
Backend/api/migrations/: env.py
Backend/api/migrations/versions/: 443d27da9a3c_add_rentals_table.py  685ffe728d14_criação_das_tabelas.py  7f98702c7a83_add_image_url_to_cars.py  97668b1bb9e4_adicionar_campo_senha_ao_modelo_user.py  ac3940a9fa19_criando_a_tabela_users.py  e6379230564c_add_image_url_to_cars.py  ec6545c92232_atualiza_tabela_cars_com_novos_campos.py
Backend/api/models/: __init__.py  cars.py  rentals.py  users.py
Backend/api/routers/: auth.py  cars.py  rentals.py  users.py
Backend/api/schemas/: __init__.py  auth.py  car.py  rental.py  rentals.py  user.py
Frontend/: App.tsx  README.md  app.json  estrela  estrela.pub  hhhh  hhhh.pub  package-lock.json  package.json  tailwind.config.js
Frontend/components/: CarCard.tsx  InfoBox.tsx
Frontend/constants/: Colors.ts
Frontend/navigation/: AppNavigator.tsx  TabNavigator.tsx
Frontend/screens/: CarDetailScreen.tsx  HomeScreen.tsx  LoadingScreen.tsx  MyRentalsScreen.tsx  ProfileScreen.tsx  SchedulingDetailsScreen.tsx  SchedulingScreen  SchedulingScreen.tsx
Frontend/services/: api.ts
Frontend/src/: App.jsx
Frontend/store/: favoriteStore.ts  rentalStore.ts
Frontend/types/: car.ts  rental.ts
